# crewhub2

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.json  vite.config.ts
.github/workflows/: canary.yml  ci.yml  release.yml
crates/crewhub-signal/: Cargo.toml
crates/fake-claude/: Cargo.toml
docs/: RELEASING.md  parity-checklist.md
docs/adr/: 0001-cli-stream-json-over-sdk-sidecar.md  0002-meetings-round-robin-not-cc-teams.md
docs/engine/: claude-control-protocol.md
docs/plans/: 2026-06-10-crewhub-v2-rebuild.md  2026-06-10-m0-foundation-implementation.md  2026-06-10-m0-foundation.drawio  2026-06-10-m1-claude-code-engine-implementation.md  2026-06-10-m1-claude-code-engine.drawio  2026-06-11-m2-core-ui-implementation.md  2026-06-11-m2-core-ui.drawio  2026-06-11-m3-workspace-implementation.md  2026-06-11-m3-workspace.drawio  2026-06-11-m4-orchestration-implementation.md  2026-06-11-m4-orchestration.drawio  2026-06-11-m6-ship-implementation.md  2026-06-11-m6-ship.drawio  2026-06-12-world-beauty-restoration.md
e2e/: automation.spec.ts  onboarding.spec.ts  smoke.spec.ts  wdio.conf.ts
scripts/: check-eprintln.py  check-version-sync.mjs  collect-fixture.py  extract-release-notes.mjs  gen-tray-icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: README.md  main.json  settings.json  workspace.json
src-tauri/fixtures/: substitution-contract.json
src-tauri/fixtures/control/: basic-run.jsonl  can-use-tool-roundtrip.jsonl
src-tauri/fixtures/teams/: task-subagent-meta-cc2.1.json  team-config-cc2.1.json  team-lead-cc2.1.jsonl  teammate-child-cc2.1.jsonl  teammate-meta-cc2.1.json
src-tauri/fixtures/transcripts/: README.md  small-session-cc2.1.jsonl  subagent-child-cc2.1.jsonl  thinking-images-cc2.1.jsonl
src-tauri/migrations/: 001_init.sql  002_history_fts.sql  003_orchestration.sql
src-tauri/src/: errlog.rs  events.rs  lib.rs  main.rs  onboarding.rs  tray.rs  updater.rs
src-tauri/src/engine/: mod.rs  provider.rs  rules.rs  status.rs  types.rs
src-tauri/src/engine/claude/: commands.rs  control.rs  detect.rs  headless.rs  history.rs  lineage.rs  mod.rs  persona.rs  process.rs  registration.rs  transcript.rs  watcher.rs
src-tauri/src/git/: mod.rs
src-tauri/src/hooks/: conflicts.rs  context.rs  installer.rs  mod.rs  receiver.rs
src-tauri/src/import/: mod.rs  v1.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/mcp/: mod.rs  registration.rs  server.rs  tools.rs
src-tauri/src/orchestrator/: action_items.rs  dispatch.rs  meeting.rs  mod.rs  scheduler.rs  standup.rs  substitute.rs
src-tauri/src/security/: mod.rs  paths.rs
src-tauri/src/store/: agents.rs  meetings.rs  mod.rs  notification_rules.rs  projects.rs  prompt_templates.rs  room_rules.rs  rooms.rs  runs.rs  session_bindings.rs  settings.rs  standups.rs  task_events.rs  tasks.rs
src-tauri/src/workspace/: docs.rs  handoff.rs  mod.rs  pick.rs
src-tauri/tests/: creator_prop.rs  hooks_context.rs  managed_session.rs  mcp_board_e2e.rs  mcp_server.rs  meeting_engine.rs  scheduler_engine.rs  sequence_engine.rs  standup_engine.rs
src/app/: CommandPalette.tsx  GameHud.tsx  ShellDialogs.tsx  WelcomePanel.tsx  WorkspaceShell.tsx  WorldOverlayHost.tsx  WorldView.tsx  keymap.ts  layout-tree.ts  (+6 more)
(+314 files in other folders)
