[package]
name = "crewhub2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crewhub2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta-typescript = "0.0.12"
thiserror = "2.0.18"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
anyhow = "1.0.102"
dirs = "6.0.0"
uuid = { version = "1.23.3", features = ["v4"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
async-trait = "0.1.89"
tokio = { version = "1.47", features = ["rt", "sync", "macros", "time", "process", "io-util", "net"] }
chrono = "0.4.45"
notify = "8.2.0"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3.27.0"

