[package]
name = "crewhub2"
default-run = "crewhub2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crewhub2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta-typescript = "0.0.12"
thiserror = "2.0.18"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
anyhow = "1.0.102"
dirs = "6.0.0"
uuid = { version = "1.23.3", features = ["v4"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
async-trait = "0.1.89"
tokio = { version = "1.47", features = ["rt", "sync", "macros", "time", "process", "io-util", "net"] }
chrono = "0.4.45"
notify = "8.2.0"
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server", "schemars"] }
axum = "0.8.9"
schemars = "1.2.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
croner = "3.0.1"
tauri-plugin-notification = "2"
# native-tls (not the default rustls-no-provider) so the workspace-unified
# reqwest keeps a working TLS default for the MCP integration tests.
tauri-plugin-updater = { version = "2", default-features = false, features = [
    "native-tls",
    "zip",
] }
tauri-plugin-process = "2"

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
tauri = { version = "2", features = ["test"] }
tempfile = "3.27.0"

